fixes alignment, and box issue with pie chart

--- a/resources/assets/less/overrides.less
+++ b/resources/assets/less/overrides.less
@@ -715,25 +715,19 @@ th.css-location > .th-inner::before {
   }
 }
 @media screen and (max-width: 1318px) and (min-width: 1200px){
-  .box{
+  .admin.box{
     height:170px;
   }
 }
 @media screen and (max-width: 1494px) and (min-width: 1200px){
-  .dashboard{
-    overflow: hidden;
-    text-overflow: ellipsis;
-    text-align: center;
+  .dashboard.small-box{
     white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 188px;
+    display: block;
+    overflow: hidden;
   }
 }
-
-.ellipsis {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-
 
 /** Form-stuff overrides for checkboxes and stuff **/
 
